<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:id="@+id/home_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp8"
            android:hint="@string/home_sign_in_email_title"
            android:singleLine="true"/>

    <EditText
            android:id="@+id/home_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/home_sign_in_password_title"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="@id/home_email_input"
            app:layout_constraintTop_toBottomOf="@id/home_email_input"/>

    <fr.lorenzocacciato.hialib.components.LoadingButton
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:textAllCaps="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/home_password_input"
            app:layout_constraintTop_toBottomOf="@id/home_password_input"
            app:lb_title="@string/home_sign_in_button_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>