<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

   <TextView
        android:id="@+id/doctor_request_details_onboard_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/absence_request_details_onboard_title"
        android:layout_margin="@dimen/dp16"
        style="@style/TextTitle"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="@dimen/dp16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26"/>

   <TextView
        android:id="@+id/doctor_request_details_section_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/absence_request_details_section_date_title"
        android:layout_margin="@dimen/dp16"
        style="@style/SectionTitle"
        app:layout_constraintStart_toStartOf="@id/doctor_request_details_onboard_title"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_onboard_title"/>

   <wheelpicker.aigestudio.widgets.WheelDatePicker
        android:id="@+id/doctor_request_details_section_date_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:verticalScrollbarPosition="left"
        android:layout_margin="@dimen/dp8"
        android:scrollbarThumbVertical="@drawable/scrollbar_style"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_section_date"/>

   <TextView
        android:id="@+id/doctor_request_details_ratio_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/doctor_request_details_ratio_title"
        android:layout_margin="@dimen/dp16"
        style="@style/SectionTitle"
        app:layout_constraintStart_toStartOf="@id/doctor_request_details_section_date_picker"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_section_date_picker"/>

   <TextView
        android:id="@+id/doctor_request_details_ratio_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor_request_details_ratio_description"
        android:visibility="gone"
        style="@style/TextDescription"
        app:layout_constraintStart_toStartOf="@id/doctor_request_details_ratio_title"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_ratio_title"/>

   <fr.lorenzocacciato.hialib.components.LoadingButton
        android:id="@+id/doctor_request_details_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:layout_marginTop="@dimen/dp12"
        app:lb_title="@string/absence_request_details_confirm_button_title"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_ratio_description"/>

   <Button
        android:id="@+id/doctor_request_details_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/absence_request_details_cancel_button_title"
        android:layout_marginLeft="@dimen/dp16"
        android:layout_marginRight="@dimen/dp16"
        android:layout_marginTop="@dimen/dp8"
        android:backgroundTint="@color/colorSecondary"
        style="@style/EnabledButton"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctor_request_details_confirm_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>