<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dp16"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
            android:id="@+id/home_onboard_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="title"
            style="@style/TextTitle"
            app:layout_constraintBottom_toTopOf="@+id/absence_details_surname_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_injection"/>

    <TextView
            android:id="@+id/absence_details_surname_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintVertical_bias="0.666"
            android:text="@string/common_fragment_details_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            style="@style/SectionTitle"/>

    <TextView
            android:id="@+id/absence_details_surname_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp16"
            android:text="CACCIATO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/absence_details_surname_label"/>

    <TextView
            android:id="@+id/absence_details_role_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/common_fragment_details_role"
            app:layout_constraintStart_toStartOf="@id/absence_details_surname_label"
            app:layout_constraintTop_toBottomOf="@id/absence_details_surname_label"
            style="@style/SectionTitle"/>

    <TextView
            android:id="@+id/absence_details_role_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:text="Médecin"
            app:layout_constraintEnd_toEndOf="@id/absence_details_surname_value"
            app:layout_constraintBottom_toBottomOf="@id/absence_details_role_label"/>

    <TextView
            android:id="@+id/absence_details_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:text="@string/common_fragment_details_planned_date"
            app:layout_constraintStart_toStartOf="@id/absence_details_role_label"
            app:layout_constraintTop_toBottomOf="@id/absence_details_role_label"
            style="@style/SectionTitle"/>

    <TextView
            android:id="@+id/absence_details_planned_date_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp16"
            android:text="24/01/2000"
            app:layout_constraintEnd_toEndOf="@id/absence_details_role_value"
            app:layout_constraintBottom_toBottomOf="@id/absence_details_email_label"/>

    <fr.lorenzocacciato.hialib.components.LoadingButton
            android:id="@+id/absence_details_send_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:lb_title="@string/common_fragment_details_send_button_title"
            android:layout_marginLeft="@dimen/dp8"
            android:layout_marginRight="@dimen/dp8"
            android:layout_marginTop="@dimen/dp24"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/absence_details_planned_date_value"/>

    <Button
            android:id="@+id/absence_details_close_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/common_fragment_details_close_button_title"
            android:layout_marginTop="@dimen/dp8"
            android:layout_marginLeft="@dimen/dp8"
            android:layout_marginRight="@dimen/dp8"
            android:backgroundTint="@color/colorSecondary"
            style="@style/EnabledButton"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/absence_details_send_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>