<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

   <ImageView
           android:id="@+id/doctor_request_role_icon"
           android:layout_width="@dimen/dp64"
           android:layout_height="@dimen/dp64"
           android:src="@drawable/ic_injection"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
           android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
           android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintVertical_bias="0.28"/>

   <TextView
           android:id="@+id/doctor_request_onboard_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/doctor_request_recycler_onboard_title"
           android:layout_margin="@dimen/dp16"
           style="@style/TextTitle"
           app:layout_constraintEnd_toEndOf="@id/doctor_request_role_icon"
           app:layout_constraintStart_toStartOf="@id/doctor_request_role_icon"
           app:layout_constraintTop_toBottomOf="@id/doctor_request_role_icon" />

   <Button
           android:id="@+id/doctor_request_recycler_onboard_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/dp16"
           android:layout_marginLeft="@dimen/dp16"
           android:layout_marginRight="@dimen/dp16"
           android:text="@string/doctor_request_recycler_onboard_button_title"
           android:textAllCaps="true"
           style="@style/DoctorButton"
           app:layout_constraintEnd_toEndOf="@id/doctor_request_onboard_title"
           app:layout_constraintStart_toStartOf="@id/doctor_request_onboard_title"
           app:layout_constraintTop_toBottomOf="@id/doctor_request_onboard_title" />

   <TextView
           android:id="@+id/doctor_request_recycler_section"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/dp8"
           android:paddingTop="@dimen/dp16"
           android:text="@string/doctor_request_recycler_section_title"
           app:layout_constraintStart_toStartOf="@id/doctor_request_recycler_onboard_button"
           app:layout_constraintTop_toBottomOf="@id/doctor_request_recycler_onboard_button"
           style="@style/SectionTitle"/>

   <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/absence_request_recycler_view"
           android:layout_width="match_parent"
           android:layout_height="@dimen/dp280"
           android:layout_margin="@dimen/dp12"
           android:scrollbars="vertical"
           app:layout_constraintTop_toBottomOf="@id/doctor_request_recycler_section">

   </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>